# pyapplebom

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
pyapplebom/: __init__.py  _native.pyi
src/: lib.rs
tests/: test_api.py
