[package]
name = "pyapplebom"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Python bindings for parsing Apple BOM files via apple-bom"
readme = "README.md"
repository = "https://github.com/bwhitn/pyapplebom.git"

[lib]
name = "pyapplebom_native"
crate-type = ["cdylib"]

[dependencies]
apple-bom = "0.3.0"
hex = "0.4.3"
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38", "generate-import-lib"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
