[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyapplebom"
version = "0.1.0"
description = "Parse Apple BOM files using the Rust apple-bom parser"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "pyapplebom maintainers" }]
keywords = ["apple", "bom", "pkg", "parser", "metadata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/bwhitn/pyapplebom.git"
Issues = "https://github.com/bwhitn/pyapplebom/issues"

[tool.maturin]
python-source = "."
module-name = "pyapplebom._native"
features = ["pyo3/extension-module"]
